--- a/eVotingUI/Login.html
+++ b/eVotingUI/Login.html
@@ -21,13 +21,13 @@
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="#">
+		<form id="signInForm">
 			<h1>Sign in</h1>
 			<span>with your personal email</span>
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="email" placeholder="Email" id="emailSignIn" />
+			<input type="password" placeholder="Password" id="passwordSignIn" />
 			<a href="#">Forgot your password?</a>
-			<button>Sign In</button>
+			<button type="submit">Sign In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
