--- a/eVotingUI/Login.html
+++ b/eVotingUI/Login.html
@@ -14,12 +14,12 @@
     <h2>Happy Election Day</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="#">
+		<form id="signUpForm">
 			<h1>Create Account</h1>
 			<span>with your personal email</span>
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
-			<input type="password" placeholder="Confirm Password" />
+			<input type="email" id="emailSignUp" placeholder="Email" />
+			<input type="password" id="passwordSignUp" placeholder="Password" />
+			<input type="password" id="confirmPasswordSignUp" placeholder="Confirm Password" />
 			<button>Sign Up</button>
 		</form>
 	</div>
