--- a/eVotingUI/Vote.html
+++ b/eVotingUI/Vote.html
@@ -8,80 +8,38 @@
 	<link rel="shortcut icon" href="images/logoIco.ico" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/vote.css">
-
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">eVoting</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="Vote.html">Vote</a>
+                  </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 mt-3">
                 <div class="borderBox">
-                    <div class="row m-0">
-                        <div class="col-lg-2 col-6 p-0">
-                            <div class="d-flex flex-column align-items-center p-3 candidateBox" value="1">
-                                <div style="width: 120px;">
-                                    <img style="border-radius: 100%;" src="images/AlbinKurti.jpg" alt="" class="img-fluid">
-                                </div>
-                                <div>
-                                    <h5>Albin Kurti</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6 p-0">
-                            <div class="d-flex flex-column align-items-center p-3 candidateBox" value="2">
-                                <div style="width: 120px;">
-                                    <img style="border-radius: 100%;" src="images/AlbinKurti.jpg" alt="" class="img-fluid">
-                                </div>
-                                <div>
-                                    <h5>Albin Kurti</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6 p-0">
-                            <div class="d-flex flex-column align-items-center p-3 candidateBox" value="3">
-                                <div style="width: 120px;">
-                                    <img style="border-radius: 100%;" src="images/AlbinKurti.jpg" alt="" class="img-fluid">
-                                </div>
-                                <div>
-                                    <h5>Albin Kurti</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6 p-0">
-                            <div class="d-flex flex-column align-items-center p-3 candidateBox" value="4">
-                                <div style="width: 120px;">
-                                    <img style="border-radius: 100%;" src="images/AlbinKurti.jpg" alt="" class="img-fluid">
-                                </div>
-                                <div>
-                                    <h5>Albin Kurti</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6 p-0">
-                            <div class="d-flex flex-column align-items-center p-3 candidateBox" value="5">
-                                <div style="width: 120px;">
-                                    <img style="border-radius: 100%;" src="images/AlbinKurti.jpg" alt="" class="img-fluid">
-                                </div>
-                                <div>
-                                    <h5>Albin Kurti</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6 p-0">
-                            <div class="d-flex flex-column align-items-center p-3 candidateBox" value="6">
-                                <div style="width: 120px;">
-                                    <img style="border-radius: 100%;" src="images/AlbinKurti.jpg" alt="" class="img-fluid">
-                                </div>
-                                <div>
-                                   <h5>Albin Kurti</h5>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="row m-0" id="candidatesRow">
+                        
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 mt-4">
                 <div class="borderBox">
-                    <div class="row m-0">
+                    <div class="row m-0" id="partiesRow">
                         <div class="col-lg-12 col-6">
                             <div class="d-flex flex-column align-items-center candidateParty p-3" value="1">
                                 <div>
@@ -128,116 +86,6 @@
             <div class="col-lg-9 mt-4">
                 <div class="borderBox">
                     <div class="row m-0" id="candidateCheckboxes">
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="1">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="2">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="3">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="4">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="5">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="6">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="7">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="8">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="9">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="10">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-6">
-                            <div class="d-flex flex-column align-items-center p-3">
-                                <div>
-                                    Albin Kurti
-                                </div>
-                                <div>
-                                    <input type="checkbox" class="checkboxCandidate" value="11">
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -247,6 +95,7 @@
         </div>
     </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="js/vote.js"></script>
 </body>
 </html>
