UI Design Fixes

--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -10,17 +10,17 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">eVoting</a>
+      <img src="./images/eVotinglogo.png" style="width: 160px;" >
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Vote.html">Vote</a>
+            <a class="nav-link active" aria-current="page" href="Vote.html">VOTE</a>
           </li>
         </ul>
       </div>
@@ -30,12 +30,12 @@
     <div class="SliderContainer">
         <div id="container">
             <div id="toggleContainer">
-               <label>Carousel</label>
+               
                <div id="toggle">
                  <div id="outer3">
                     <div id="slider3"></div>
                  </div>
-                 <label>Tiles</label>
+                
               </div>
             </div>
             <div id="galleryView">
@@ -58,7 +58,7 @@
 
 
     <!-- Footer -->
-<footer class="page-footer font-small stylish-color-dark pt-4">
+<footer id ="myFooter"class="page-footer font-small stylish-color-dark pt-4">
 
     <!-- Footer Links -->
     <div class="container text-center text-md-left">
@@ -70,10 +70,10 @@
         <div class="col-md-4 mx-auto">
   
           <!-- Content -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Footer Content</h5>
-          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-            consectetur
-            adipisicing elit.</p>
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Rreth Komisionit Qendror për Zgjedhje</h5>
+          <p>
+            KQZ, është përgjegjës për organizimin dhe implementimin e zgjedhjeve në Kosovë. Roli i KQZ-së është të rregullojë procesin elektoral përmes miratimit të Rregullave Zgjedhore dhe, mbikëqyrjen e procesit zgjedhor në të gjitha aspektet 
+            për të siguruar që zgjedhjet të arrijnë standardet ndërkombëtare.</p>
   
         </div>
         <!-- Grid column -->
@@ -84,20 +84,17 @@
         <div class="col-md-2 mx-auto">
   
           <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Zgjedhjet</h5>
   
           <ul class="list-unstyled">
             <li>
-              <a href="#!">Link 1</a>
+              <a href="#!">Zgjedhjet për Kuvend të Kosovës</a>
             </li>
             <li>
-              <a href="#!">Link 2</a>
+              <a href="#!">Zgjedhjet për Kuvende Komunale</a>
             </li>
             <li>
-              <a href="#!">Link 3</a>
-            </li>
-            <li>
-              <a href="#!">Link 4</a>
+              <a href="#!">Zgjedhjet për Kryetarë të Komunave</a>
             </li>
           </ul>
   
@@ -110,20 +107,20 @@
         <div class="col-md-2 mx-auto">
   
           <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Legjislacioni </h5>
   
           <ul class="list-unstyled">
             <li>
-              <a href="#!">Link 1</a>
+              <a href="#!">Kushtetuta dhe Ligjet</a>
             </li>
             <li>
-              <a href="#!">Link 2</a>
+              <a href="#!">Rregullat Zgjedhore</a>
             </li>
             <li>
-              <a href="#!">Link 3</a>
+              <a href="#!">Udhëzimet Administrative</a>
             </li>
             <li>
-              <a href="#!">Link 4</a>
+              <a href="#!">Memorandumet e Bashkëpunimit</a>
             </li>
           </ul>
   
@@ -136,20 +133,20 @@
         <div class="col-md-2 mx-auto">
   
           <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Njoftime dhe Publikime</h5>
   
           <ul class="list-unstyled">
             <li>
-              <a href="#!">Link 1</a>
+              <a href="#!">Strategjia dhe Plani i punës</a>
             </li>
             <li>
-              <a href="#!">Link 2</a>
+              <a href="#!">Raporte Vjetore </a>
             </li>
             <li>
-              <a href="#!">Link 3</a>
+              <a href="#!">Raporte Financiare</a>
             </li>
             <li>
-              <a href="#!">Link 4</a>
+              <a href="#!">Hulumtime dhe Analiza</a>
             </li>
           </ul>
   
@@ -167,7 +164,7 @@
     <!-- Call to action -->
     <ul class="list-unstyled list-inline text-center py-2">
       <li class="list-inline-item">
-        <h5 class="mb-1">Register for free</h5>
+        <h5 class="mb-1">Ju lutemi regjistrohuni këtu që të njoftoheni për lajmet më të reja</h5>
       </li>
       <li class="list-inline-item">
         <a href="#!" class="btn btn-danger btn-rounded">Sign up!</a>
@@ -208,8 +205,7 @@
     <!-- Social buttons -->
   
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+    <div class="footer-copyright text-center py-3">© 2022 
     </div>
     <!-- Copyright -->
   
