--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -20,7 +20,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Vote.html">VOTE</a>
+            <a class="nav-link" aria-current="page" href="Vote.html">VOTE</a>
           </li>
         </ul>
       </div>
