--- a/eVotingUI/Vote.html
+++ b/eVotingUI/Vote.html
@@ -7,22 +7,26 @@
     <title>eVoting</title>
 	<link rel="shortcut icon" href="images/logoIco.ico" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/vote.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/vote.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container-fluid">
-          <img src="./images/eVotinglogo.png" style="width: 160px;" >
+          <img src="./images/eVotinglogo.png" style="width: 160px;" />
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Vote.html">VOTE</a>
+                <a class="nav-link active" aria-current="page" href="Vote.html">Vote</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="VoteCounts.html">Counted Votes</a>
               </li>
             </ul>
           </div>
@@ -32,7 +36,7 @@
         <div class="row">
             <div class="col-lg-12 mt-3" >
                 <div class="borderBox">
-                    <div class="row m-0" id="candidatesRow"  >
+                    <div class="row m-0" id="candidatesRow">
                         
                     </div>
                 </div>
