--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -8,9 +8,9 @@
     <script src="https://kit.fontawesome.com/2c7fc28a2f.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
     <div class="container-fluid">
-      <img src="./images/eVotinglogo.png" style="width: 160px;" >
+      <img src="./images/eVotinglogo.png" style="width: 160px;" />
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,6 +21,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="Vote.html">VOTE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="VoteCounts.html">Counted Votes</a>
           </li>
         </ul>
       </div>
