--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -3,14 +3,15 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/logoIco.ico" />
+    <title>Home</title>
     <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
     <script src="https://kit.fontawesome.com/2c7fc28a2f.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
     <div class="container-fluid">
-      <img src="./images/eVotinglogo.png" style="width: 160px;" />
+      <img src="./images/Logo.png" style="width: 80px;" />
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,16 +30,14 @@
       </div>
     </div>
   </nav>
-    </div>
-    <div class="SliderContainer">
+    <div>
+      <div class="SliderContainer">
         <div id="container">
             <div id="toggleContainer">
-               
                <div id="toggle">
                  <div id="outer3">
                     <div id="slider3"></div>
                  </div>
-                
               </div>
             </div>
             <div id="galleryView">
