--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -264,43 +264,41 @@
 <div class="footer">
   <div class="container">
     <div class="one_fourth">
-      <h3>Contact Informations</h3>
-      <p><span class="orange"><strong>Address:</strong></span> <br>
-        No.2 - 123678 street name City, Country</p>
-      <p><span class="orange"><strong>Phone:</strong></span> <br>
-        + 9 (094) 067 93567<br>
+      <h3>Kontakti</h3>
+      <p><span class="orange"><strong>Adresa:</strong></span> <br>
+        Adresa: Rruga “Ibrahim Rrugova”, Nr. 4, Prishtinë,Kosovë</p>
+      <p><span class="orange"><strong>Tel:</strong></span> <br>
+         +383 4 4510810<br>
       </p>
       <p><span class="orange"><strong>Email:</strong></span> <br>
-        info@yoursite.com<br>
+        info@kqz.kosovo.al<br>
       </p>
     </div>
     <!-- four columns ends here -->
     <div class="one_fourth">
-      <h3>Blogroll</h3>
+      <h3>Informata</h3>
       <ul>
-        <li><a href="#" title="">Development Blog</a></li>
-        <li><a href="#" class="">New Freebies</a></li>
-        <li><a href="#" class="">Themeforest Theme</a></li>
-        <li><a href="#" class=""> Design News</a></li>
-        <li><a href="#" class="">WordPress Theme</a></li>
+        <li><a href="#" title="">Kushtetuta</a></li>
+        <li><a href="#" class="">Kodi Zgjedhor</a></li>
+        <li><a href="#" class="">Për Partitë Politike</a></li>
+        <li><a href="#" class="">ër Partitë Politike</a></li>
       </ul>
     </div>
     <!-- four columns ends here -->
     <div class="one_fourth">
-      <h3>Archive</h3>
+      <h3>Njoftime</h3>
       <ul>
-        <li><a href="#" class=""> August 2012</a></li>
-        <li><a href="#" class="">July 2012</a></li>
-        <li><a href="#" class="">Juny 2012</a></li>
-        <li><a href="#" class=""> May 2012</a></li>
-        <li><a href="#" class="">April 2012</a></li>
+        <li><a href="#" class=""> Lajme</a></li>
+        <li><a href="#" class="">Rendi i ditës</a></li>
+        <li><a href="#" class="">Njoftime Publike</a></li>
+        <li><a href="#" class=""> Vende të lira të punës</a></li>
       </ul>
     </div>
     <!-- four columns ends here -->
     <div class="one_fourth lastcolumn">
-      <h3>About</h3>
-      <p>Freebix is responsive, simple and clean template with a lot attention to detail. Get it now!</p>
-      <p>Visit <a href="http://anarieldesign.com/" rel="nofollow">Anariel Design</a> and find more interesting things.</p>
+      <h3>Rreth Zgjedhjeve</h3>
+      <p>Çdo demokraci ka nevojë që herë pas here të testojë funksionalitetin dhe efikasitetin e institucioneve të saj, e zgjedhjet janë ato që pikërisht e mundësojnë këtë. 
+       <br> Si një prej instrumenteve më të rëndësishme të demokracisë sot, zgjedhjet shërbejnë si rrugë për pjesëmarrje të qytetarëve në procese politike. </p>
     </div>
     <!-- four columns ends here --> 
   </div>
@@ -311,7 +309,7 @@
 ================================================== -->
 <div id="copyright">
   <div class="container">
-    <p class="copyright">&copy; Copyright 2013. &quot;Freebix&quot; by <a href="http://www.anarieldesign.com/" rel="nofollow">Anariel Design</a>. All rights reserved.</p>
+    <p class="copyright">&copy; Copyright 2022. </p>
   </div>
   <!-- container ends here --> 
 </div>
