--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -16,7 +16,7 @@
 	object-fit: cover;
 }
 </style>
-<link rel="shortcut icon" href="images/favicon.png">
+<link rel="shortcut icon" href="images/kqzLogo.png">
 <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
@@ -29,23 +29,12 @@
   <div class="container"> 
     <!-- Header | Logo, Menu
 		================================================== -->
-    <div class="logo"><a href="index.html"><img style="width: 80px;" src="images/Logo.png" alt="" /></a></div>
+    <div class="logo"><a href="index.html"><img style="width: 80px;" src="images/kqzLogo.png" alt="" /></a></div>
     <div class="mainmenu">
       <div id="mainmenu">
         <ul class="sf-menu">
           <li><a href="index.html" id="visited">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a>
-            <ul>
-              <li><a href="portfolioproject.html">Portfolio Project</a></li>
-            </ul>
-          </li>
-          <li><a href="blog.html">Blog</a>
-            <ul>
-              <li><a href="singleblog.html">Single Post</a></li>
-            </ul>
-          </li>
-          <li><a href="features.html">Features</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -57,11 +46,6 @@
           <option value="">Navigation</option>
           <option value="index.html">Home</option>
           <option value="about.html">About</option>
-          <option value="portfolio.html">Portfolio</option>
-          <option value="portfolioproject.html">Portfolio Project</option>
-          <option value="blog.html">Blog</option>
-          <option value="singleblog.html">Single Post</option>
-          <option value="features.html">Features</option>
           <option value="contact.html">Contact</option>
         </select>
       </form>
