About - Page Design

--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -265,7 +265,7 @@
         <li><a href="#" title="">Kushtetuta</a></li>
         <li><a href="#" class="">Kodi Zgjedhor</a></li>
         <li><a href="#" class="">Për Partitë Politike</a></li>
-        <li><a href="#" class="">ër Partitë Politike</a></li>
+        <li><a href="#" class="">Për Partitë Politike</a></li>
       </ul>
     </div>
     <!-- four columns ends here -->
