--- a/eVotingUI/Vote.html
+++ b/eVotingUI/Vote.html
@@ -77,12 +77,12 @@
         </div>
       </div>
       <div class="col-lg-9 mt-4">
-        <div class="borderBox">
-          <div class="row m-0" id="candidateCheckboxes">
+        <div class="borderBox h-100">
+          <div class="row m-0 h-100" id="candidateCheckboxes">
           </div>
         </div>
       </div>
-      <div class="col-lg-12 text-end mb-5">
+      <div class="col-lg-12 text-end mt-2">
         <button type="button" class="btn btn-primary" id="btnVote">VOTE</button>
       </div>
     </div>
